Progress on Tracks.js

--- a/music-master/src/index.css
+++ b/music-master/src/index.css
@@ -25,6 +25,11 @@
     height: 200px;
     border-radius: 100px;
   }
+
+  .album-art {
+    width: 200px;
+    height: 200px;
+  }
   
   .title-fade-out {
     opacity: 0;
