--- a/music-master/src/index.css
+++ b/music-master/src/index.css
@@ -19,36 +19,26 @@
   h1, h2, h3, h4, h5 {
     font-family: 'EconomicaBold' !important;
   }
-  
-  .profile {
-    width: 200px;
-    height: 200px;
-    border-radius: 100px;
+
+  .track {
+    width: 250px;
+    height: 250px;
+    position: relative;
+    display: inline-block;
+    cursor: pointer;
+    margin: 20px;
   }
 
-  .album-art {
-    width: 200px;
-    height: 200px;
+  .track-image {
+    width: 250px;
+    height: 250px;
   }
-  
-  .title-fade-out {
-    opacity: 0;
-    animation-name: fade-out;
-    animation-duration: 2s;
-  }
-  
-  .title-fade-in {
-    opacity: 100;
-    animation-name: fade-in;
-    animation-duration: 2s;
-  }
-  
-  @keyframes fade-out {
-    from {opacity: 100}
-    to {opacity: 0}
-  }
-  
-  @keyframes fade-in {
-    from {opacity: 0}
-    to {opacity: 100}
+
+  .track-text {
+    position: absolute;
+    width: 250px;
+    bottom: 0px;
+    background-color: black;
+    color: white;
+    padding: 5px;
   }
